--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
   <html lang="fr">
     <head>
       <title>Little one page</title>
+      <meta name="description" content="Ce site web est une petite page pour tester des fonctionaliter pour créer un site web." />
       <meta charset="UTF-8">
-      <meta charset="ISO-8859-1" />
-      <meta name="theme-color" content="red">
-      <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="theme-color" content="#F62909">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/reset.css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
-      <header>
+      <header role="En-tete de la page web">
         <h1>Titre</h1>
-        <p>Baseline</p>
+        <h2>Baseline</h2>
       </header>
 
-      <nav>
+      <nav role="Ceci est la bare de navigation du site">
         <ul>
           <li><a href="#1">Sous-titre 1</a></li>
           <li><a href="#2">Sous-titre 2</a></li>
@@ -25,15 +25,27 @@
         </ul>
       </nav>
 
-      <main>
-        <section id="1">
-          <h2><i class="fas fa-angle-double-right"></i>Sous-titre 1</h2>
+      <main role="Ceci est le corp de la page web">
+        <nav id="bread" role="ceci indique ou vous vous trouver sur le site">
+            <ol itemscope itemtype="http://schema.org/BreadcrumbList">
+              <li itemprop="itemListElement" itemscope
+                  itemtype="http://schema.org/ListItem">
+                <a itemtype="http://schema.org/Thing"
+                   itemprop="item" href="http://simplon-charleville.fr/ftp-solo/ingrid-nicolas/">
+                    <span itemprop="name">Acceuille</span></a>
+                <meta itemprop="position" content="1" />
+              </li>
+            </ol>
+        </nav>
+
+        <section id="1" role="premier article">
+          <h3><i class="fas fa-angle-double-right"></i>Sous-titre 1</h3>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
 
-          <div class="galerie">
+          <div class="galerie" role="Liste des emploier">
             <figure>
               <img src="img/profil.jpeg" alt="Mr Dupont">
               <figcaption class="nom">Mr. Dupond<br/><span>Directeur</span></figcaption>
@@ -86,8 +98,8 @@
           </div>
         </section>
 
-        <section id="2">
-          <h2><i class="fas fa-angle-double-right"></i>Sous-titre 2</h2>
+        <section id="2" role="Deuxiéme article">
+          <h3><i class="fas fa-angle-double-right"></i>Sous-titre 2</h3>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -98,8 +110,8 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2576.956194069734!2d4.720275316089992!3d49.76808097938704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ea0e062e03d7e9%3A0xc5cc5f6ee91f2b25!2sCCI+des+Ardennes!5e0!3m2!1sfr!2sfr!4v1527844627903" frameborder="0" style="border:0" allowfullscreen></iframe>
 
       <main>
-        <section id="3">
-          <h2><i class="fas fa-angle-double-right"></i>Sous-titre 3</h2>
+        <section id="3" role="troisieme article">
+          <h3><i class="fas fa-angle-double-right"></i>Sous-titre 3</h3>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -107,42 +119,42 @@
 
           <div class="image_form">
 
-            <img src="img/hotline.jpg" alt="image"/>
+            <img src="img/hotline.jpg" alt="image decoration"/>
 
             <div class="form">
-              <form action="" method="post">
+              <form action="#" method="post" role="Formulaire de cantact">
                 <div class="champ">
-                  <label for="full_name" class="far fa-user"></label>
+                  <label for="full_name" class="far fa-user" role="nom"></label>
                   <input type="text" id="full_name" name="full_name" placeholder="Full name" required/>
                 </div>
 
                 <div class="champ">
-                  <label for="mail" class="far fa-envelope"></label>
+                  <label for="mail" class="far fa-envelope" role="mail"></label>
                   <input type="email" id="mail" name="mail" placeholder="Eg.example@email.com" required/>
                 </div>
 
                 <div class="champ">
-                  <label for="tel" class="fas fa-mobile-alt"></label>
+                  <label for="tel" class="fas fa-mobile-alt" role="Numero de telephone"></label>
                   <input type="tel" id="tel" name="tel" placeholder="Eg.+336 00 00 00 00" required/>
                 </div>
 
                 <div class="champ">
-                  <label for="comment" class="far fa-comment"></label>
+                  <label for="comment" class="far fa-comment" role="comment"></label>
                   <textarea name="comment" id="comment" placeholder="Your comments" required></textarea>
                 </div>
 
-                <input type="submit" class="bouton" value="SEND NOW"/>
+                <input type="submit" class="bouton" value="SEND NOW" role="envoyer"/>
               </form>
             </div>
           </div>
         </section>
       </main>
 
-      <footer>
-        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+      <footer role="Pied de page contenant la liste des reseau sociaux">
+        <a href="#" target="_blank"><i class="fab fa-facebook-f" role="facebook"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-twitter" role="twitter"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram" role="instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-youtube" role="youtube"></i></a>
       </footer>
 
     </body>
